# Autonomous-mobile-robot

./: README.md
ros_mobile_robot/: CMakeLists.txt  ROS commands  new_robot_config.rviz  package.xml  rviz config.rviz  terminal_error.txt
ros_mobile_robot/config/: amcl.launch  amcl_params.yaml  control.launch  control.yaml  costmap_common_params.yaml  diagnostics.yaml  dwa_local_planner_params.yaml  gazebo_ros_control_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  localization.yaml  mobile_robot_bringup.launch  move_base_params.yaml  navigation.yaml  rrt_exploration.yaml  twist_mux.yaml
ros_mobile_robot/gazebo/: mobile_robot_empty.launch  mobile_robot_house.launch  mobile_robot_stage_1.launch  mobile_robot_stage_3.launch  mobile_robot_stage_4.launch  mobile_robot_world.launch
ros_mobile_robot/launch/: autonomous_exploration.launch  drive_robot.launch  gmapping.launch  mobile_robot.launch  move_base.launch  navigation.launch  orbslam3_mapping.launch  robot_exploration.launch  robot_mapping.launch  robot_mapping_orbslam3.launch  robot_rrt_exploration.launch  waypoint_nav.launch
ros_mobile_robot/maps/: map.yaml  office.pgm  office.yaml  office_cpr.pgm  office_cpr.yaml  office_small.pgm  office_small.yaml  stage_1.pgm  stage_3.pgm  stage_3.yaml  workshop.pgm  workshop.yaml
ros_mobile_robot/robot_description/: description.launch
ros_mobile_robot/rviz/: robot_description.rviz  ros_mobile_robot_navigation.rviz  rrt.rviz
ros_mobile_robot/scripts/: assigner.py  filter.py  functions.py  global_rrt.py  local_rrt.py  waypoint_navigation_sm.py
ros_mobile_robot/src/: exploration_node.cpp  pointcloud_to_grid.cpp
ros_mobile_robot/urdf/: mobile_robot.urdf  mobile_robot.urdf.xacro
