<?xml version="1.0"?>
<package format="2">
  <name>ros_mobile_robot</name>
  <version>0.0.0</version>
  <description>The ros_mobile_robot package</description>
  <maintainer email="arianodacons@gmail.com">Ariano da Conceicao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!--  build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <!-- Navigation Stack -->
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>
  <depend>hardware_interface</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>transmission_interface</depend>
  <depend>velocity_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joy</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <!-- Mapping and Localization -->
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  
  
  <!-- Visualization -->
  <depend>rviz</depend>
 <!-- Command multiplexing -->
  <depend>twist_mux</depend>

  <!-- Python dependencies -->
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>python-scipy</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
